--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             position: relative;
             width: 100%;
             max-width: 600px;
-            height: 200px;
+            height: 100vh;
             border: 2px solid #333;
             background-color: #fff;
             overflow: hidden;
@@ -77,7 +77,14 @@
         let score = 0;
         let isJumping = false;
 
-        document.addEventListener('keydown', jump);
+        // Handle jump with keyboard or touch
+        document.addEventListener('keydown', (e) => {
+            if (e.code === 'Space') {
+                jump();
+            }
+        });
+
+        document.addEventListener('touchstart', jump);
 
         function jump() {
             if (isJumping) return;
