--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
 <body>
     <div id="gameContainer">
         <div id="cube"></div>
-        <div class="obstacle"></div>
         <div id="score">Score: 0</div>
     </div>
 
@@ -76,6 +75,7 @@
         const scoreElement = document.getElementById('score');
         let score = 0;
         let isJumping = false;
+        let lastObstaclePassed = null;
 
         // Handle jump with keyboard or touch
         document.addEventListener('keydown', (e) => {
@@ -108,6 +108,7 @@
             for (let obstacle of obstacles) {
                 const obstacleRect = obstacle.getBoundingClientRect();
 
+                // Check collision
                 if (
                     cubeRect.left < obstacleRect.right &&
                     cubeRect.right > obstacleRect.left &&
@@ -115,6 +116,15 @@
                 ) {
                     alert('Game Over! Your score: ' + score);
                     location.reload(); // Restart the game
+                }
+
+                // Check if the obstacle was successfully jumped over
+                if (
+                    obstacleRect.right < cubeRect.left && 
+                    obstacle !== lastObstaclePassed
+                ) {
+                    lastObstaclePassed = obstacle;
+                    updateScore();
                 }
             }
         }
@@ -137,7 +147,6 @@
 
         setInterval(createObstacle, 2000);
         setInterval(checkCollision, 10);
-        setInterval(updateScore, 1000);
     </script>
 </body>
 </html>
